[build-system]
requires = ["setuptools>=40.8.0", "wheel", "cython", "numpy", "toml"]
build-backend = "setuptools.build_meta"
parallel   = false
purepython = false
gui        = true

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.git
    | \.mypy_cache
    | \venv
    | build
    | dist
  )/
)
'''