[metadata]
name = pymd
version = 0.1
author = Dario Zarcone

[options]
zip_safe = False
package_dir =
    =src
packages = pymd
install_requires =
    numpy
    matplotlib

[options.entry_points]
console_scripts =
    pymd-d = pymd:gui
gui_scripts =
    pymd = pymd:gui

[options.extras_require]
dev =
    flake8
    pylint

