[metadata]
name = pymd
version = 0.1
author = Dario Zarcone

[options]
zip_safe = False
package_dir =
    =src
packages = pymd
install_requires =
    numpy
    matplotlib
    nptyping

[options.entry_points]
console_scripts =
    pymd-d  = pymd:gui
    pymdplot-d = pymd:analyze_gui
gui_scripts =
    pymd = pymd:gui
    pymdplot = pymd:analyze_gui

[options.extras_require]
dev =
    flake8
    black
    mypy

[flake8]
extend-ignore = E203, W503
exclude = src/pymd/gui/view/ui/*,src/pymd/gui/resources.py
